--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@google/genai": "^1.5.1",
     "classnames": "^2.5.1",
     "eventemitter3": "^5.0.1",
+    "firebase": "^11.9.1",
     "lodash": "^4.17.21",
     "next": "15.3.4",
     "react": "^19.0.0",
