--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@google/genai": "^1.5.1",
     "canvas": "^3.1.1",
     "classnames": "^2.5.1",
+    "clsx": "^2.1.1",
     "eventemitter3": "^5.0.1",
     "firebase": "^11.9.1",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.522.0",
     "next": "15.3.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -22,6 +24,7 @@
     "react-select": "^5.10.1",
     "react-syntax-highlighter": "^15.6.1",
     "sass": "^1.89.2",
+    "tailwind-merge": "^3.3.1",
     "vega": "^6.1.2",
     "vega-embed": "^7.0.2",
     "vega-lite": "^6.1.0",
