--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-icons": "^5.5.0",
     "react-select": "^5.10.1",
     "react-syntax-highlighter": "^15.6.1",
+    "recharts": "^2.15.4",
     "sass": "^1.89.2",
     "tailwind-merge": "^3.3.1",
     "vega": "^6.1.2",
