--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@google/genai": "^1.5.1",
+    "@mediapipe/tasks-genai": "^0.10.23",
     "@mediapipe/tasks-vision": "^0.10.22-rc.20250304",
     "canvas": "^3.1.1",
     "classnames": "^2.5.1",
